--- a/main.css
+++ b/main.css
@@ -1,4 +1,5 @@
 body {
+    color: #0C6EE8;
     background-image: url('img/theory_trainer_bg.png');
 }
 
@@ -12,11 +13,8 @@ body {
     background-color: #630DFF;
 }
 
-.answers {
-    background-color: #0C6EE8;
-}
-
-ul,
 li {
-    background-color: #0C6EE8;
+    list-style: none;
+    border-bottom: 3px solid black;
+    margin-bottom: 13px;
 }
